--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@janvorisek/drie",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-alpha.1",
   "description": "Drie is a Vue 3 component library for THREE.js made with TypeScript and Composition API",
+  "private": false,
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
