--- a/package.json
+++ b/package.json
@@ -74,5 +74,10 @@
   },
   "peerDependencies": {
     "three": "^0.148.0"
+  },
+  "dependencies": {
+    "@tweakpane/plugin-essentials": "^0.1.5",
+    "tweakpane": "^3.1.2",
+    "v-tweakpane": "^0.2.0"
   }
 }
