--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.8.0",
+    "flexsearch": "^0.7.31",
     "gh-pages": "4.0.0",
     "happy-dom": "^8.1.1",
     "husky": "^8.0.2",
+    "markdown-it": "^13.0.1",
     "move-cli": "^2.0.0",
     "prettier": "^2.8.1",
     "release-it": "^15.6.0",
@@ -68,6 +70,7 @@
     "vite": "^4.0.3",
     "vite-plugin-dts": "1.7.1",
     "vitepress": "^1.0.0-alpha.33",
+    "vitepress-plugin-search": "^1.0.4-alpha.17",
     "vitest": "^0.27.1",
     "vue": "^3.2.45",
     "vue-docgen-cli": "^4.56.1",
